Fix  mobile nav scrolling bug

--- a/frontend/app/views/fragments/nav.scala.html
+++ b/frontend/app/views/fragments/nav.scala.html
@@ -8,7 +8,7 @@
 
 @if(inlineMode) {
     <li class="@navItemClass()">
-        <a href="/" class="nav__link"><i class="icon-home"></i> <span class="u-h">Home</span></a>
+        <a href="/" class="nav__link"><i class="icon icon-home"></i> <span class="u-h">Home</span></a>
     </li>
 }
 <li class="@navItemClass()">
