--- a/frontend/assets/stylesheets/state/_responsive.scss
+++ b/frontend/assets/stylesheets/state/_responsive.scss
@@ -14,6 +14,12 @@
     }
 }
 
+.hidden-tablet {
+    @include mq($until: tablet) {
+        display: none !important;
+    }
+}
+
 .mobile-only {
     @include mq(tablet) {
         display: none !important;
