--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -35,7 +35,7 @@
                 </nav>
             </div>
             <div class="header__secondary">
-                <ul class="nav nav--global nav-global--mini nav--top-border-off">
+                <ul class="nav nav--external nav--brand hidden-tablet">
                     <li><a href="http://www.theguardian.com/" class="nav__link case--lower">The Guardian</a></li>
                     <li><a href="http://jobs.theguardian.com/" class="nav__link case--lower">Jobs</a></li>
                     <li><a href="https://soulmates.theguardian.com/" class="nav__link case--lower">Soulmates</a></li>
@@ -94,8 +94,8 @@
             </div>
         </div>
         <nav role="navigation" class="nav nav--global nav--global--header">
-            <div class="header__primary navigation__scroll">
-                <ul class="inline-list">
+            <div class="nav__scroll">
+                <ul class="nav__list inline-list">
                     @fragments.nav(inlineMode=true)
                 </ul>
             </div>
