--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -52,7 +52,7 @@
         <div class="home-slice__inner u-cf">
             <div class="home-slice__copy-block">
                 <div class="home-slice__media">
-                    <img src="@Asset.at("images/homeslice/740-Home-patrons.jpg")" alt="" class="responsive-img" />
+                    <img src="@Asset.at("images/homeslice/740-Home-patrons.jpg")" alt="Become a Patron" class="responsive-img" />
                 </div>
                 <div class="home-slice__headline-block">
                     <h2 class="home-slice__headline">Become a Patron and support the Guardian's future</h2>
