added in founding members section

--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -87,6 +87,30 @@
         </div>
     </div>
 
+    @* ===== Founding Members ===== *@
+
+    <div class="home-slice home-slice--content tier-hidden u-cf">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__copy-block">
+                <div class="home-slice__media">
+                    <img src="@Asset.at("images/homeslice/740-crowd.jpg")" alt="" class="responsive-img" />
+                </div>
+                <div class="home-slice__headline-block">
+                    <h2 class="home-slice__headline">Founding members: join us at the start</h2>
+                </div>
+                <div class="home-slice__offset-copy">
+                    <p class="home-slice__copy">
+                        Guardian Membership is launching in beta. We have ambitious plans, and new features will be added regularly. Guardian membership will grow into a vibrant, self-organising community of free-thinkers.
+                    </p>
+                    <p class="home-slice__copy">
+                        Help to build and shape this community by joining as a Founding Partner or Patron,
+                        with the guarantee that the price you pay today will not rise.</p>
+                    <a class="action" href="/join" id="qa-join">Join today</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="page-slice">
         <div id="whats-included" class="page-slice__inner">
             <h2 class="page-slice__headline">What's included</h2>
