add top id to body

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -62,7 +62,7 @@
 
         <script src="//cdn.optimizely.com/js/2012460034.js"></script>
     </head>
-    <body>
+    <body id="top">
         <a class="u-h skip" href="#container">Skip to main content</a>
 
         @* ===== Anything in here will be hidden for old browsers ===== *@
