--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -22,7 +22,7 @@
     <div class="l-footer__secondary gs-container" role="contentinfo">
         <ul class="colophon u-cf case--lower">
             <li class="colophon__item"><a data-link-name="help" href="/help">Help</a></li>
-            <li class="colophon__item"><a data-link-name="contact" href="http://www.theguardian.com/help/contact-us">Contact us</a></li>
+            <li class="colophon__item"><a data-link-name="contact" href="@Config.guardianContactUsUrl">Contact us</a></li>
             <li class="colophon__item"><a data-link-name="feedback" href="/feedback">Feedback</a></li>
             <li class="colophon__item"><a data-link-name="terms" href="@Config.guardianMembershipTermsUrl">Terms &amp; conditions</a></li>
             <li class="colophon__item"><a data-link-name="privacy" href="@Config.guardianPrivacyUrl">Privacy policy</a></li>
