--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -31,7 +31,7 @@
         <div class="event-block__events">
             <ul class="grid grid--3up u-unstyled@if(eventPortfolio.normal.length == 0){ events-list--empty}" id="js-filter-container">
                 @for(event <- eventPortfolio.normal) {
-                    <li class="grid__item">
+                    <li class="grid__item js-filter-item">
                         @fragments.event.item(event, false)
                     </li>
                 }
