Add analytics to major calls to action

--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -1,14 +1,14 @@
 @import org.joda.time.DateTime
 @import configuration.Config
-<footer class="l-footer u-cf hidden-print" data-link-name="footer" data-component="footer">
+<footer class="l-footer u-cf hidden-print" data-component="footer">
     <div class="l-footer__primary">
         <div id="footer-nav" class="gs-container">
             <div class="brand-bar u-cf">
-                <a href="/" data-link-name="site logo" class="guardian-logo-footer hidden-mobile">
+                <a href="/" class="guardian-logo-footer hidden-mobile">
                     <span class="u-h">@Config.siteTitle</span>
                     <i class="icon-membership_beta_mobile"></i>
                 </a>
-                <a class="brand-bar__item brand-bar__item--action no-underline" data-link-name="back to top" href="#top">
+                <a class="brand-bar__item brand-bar__item--action no-underline" href="#top">
                     <span class="control">
                         <span class="control__icon">
                             <i class="i icon-arrow-up-black"></i>
