--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -60,7 +60,7 @@
                 <div class="home-slice__offset-copy">
                     <blockquote class="home-slice__copy--quote">The only relationship our journalists have is with our readers. Membership gives the real possibility of deepening the intense bond between the producers and consumers of the Guardian.</blockquote>
                     <cite class="home-slice__copy--cite">Alan Rusbridger, editor-in-chief of the Guardian</cite>
-                    <a class="action" href="/patrons">Become a Patron</a>
+                    <a class="action" href="/patrons" data-link-name="Become a Patron">Become a Patron</a>
                 </div>
             </div>
         </div>
@@ -116,17 +116,17 @@
             <h2 class="page-slice__headline">What's included</h2>
             <div class="page-slice-content">
                 @fragments.tier.feature(Tier.Friend, "Benefits") {
-                    <a class="action action--no-margin js-opt-become-member" href="/join/friend/enter-details">
+                    <a class="action action--no-margin js-opt-become-member" data-link-name="Become a Friend" href="/join/friend/enter-details">
                         Become a Friend
                     </a>
                 }
                 @fragments.tier.feature(Tier.Partner, "All Friend benefits, plus") {
-                    <a class="action action--no-margin js-opt-become-member" href="/join/partner/enter-details">
+                    <a class="action action--no-margin js-opt-become-member" data-link-name="Become a Partner" href="/join/partner/enter-details">
                         Become a Partner
                     </a>
                 }
                 @fragments.tier.feature(Tier.Patron, "All Partner benefits, plus") {
-                    <a class="action action--no-margin js-opt-become-member" href="/join/patron/enter-details">
+                    <a class="action action--no-margin js-opt-become-member" data-link-name="Become a Patron" href="/join/patron/enter-details">
                         Become a Patron
                     </a>
                 }
