Add hover transition to event items

--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -255,3 +255,7 @@ $flash-error-background: #fdf4f3;
 $flash-success-color: #1c6326;
 $flash-success-border: #33a22b;
 $flash-success-background: #faffe5;
+
+$transition-duration-short: .25s;
+$transition-duration-medium: .5s;
+$transition-duration-long: 1s;
