--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -221,20 +221,13 @@ $filter-icon-size: 18px;
    Event Listings - Event Item
    ========================================================================== */
 
-.even-item {
+.event-item {
     @include clearfix;
-}
-
-// global styles for the inner item container
-.event-item__container {
-    position: relative;
     background-color: $c-neutral7;
+    transition: background-color $transition-duration-medium ease;
 
-    @include mq(mobileLandscape) {
-        height: rem(450px);
-    }
-
-    &:hover, *:hover {
+    &:hover,
+    *:hover {
         text-decoration: none;
     }
     &:hover {
@@ -242,18 +235,32 @@ $filter-icon-size: 18px;
         .event-item__title {
             text-decoration: underline;
         }
+        .event-item__media a {
+            background-color: $black;
+        }
+        .event-item__media img {
+            opacity: .8;
+        }
     }
-
 }
-
-.event-item__media a,
-.event-item__media img {
-    // remove descenders
-    vertical-align: text-bottom;
-    display: block;
+.event-item__container {
+    position: relative;
+    @include mq(mobileLandscape) {
+        height: rem(450px);
+    }
 }
-
-// the event item details (title, location etc)
+.event-item__media {
+    a, img {
+        // Remove descenders
+        vertical-align: text-bottom;
+        display: block;
+        transition: opacity $transition-duration-medium ease, background-color $transition-duration-medium ease;
+    }
+    img {
+        // Prevent flicker on hover in WebKit
+        -webkit-backface-visibility: hidden;
+    }
+}
 .event-item__meta {
     padding: rem($gs-gutter / 2);
 
@@ -270,7 +277,6 @@ $filter-icon-size: 18px;
         padding: rem($gs-gutter);
     }
 }
-
 .event-item__title {
     color: $black;
     margin-bottom: rem($gs-baseline);
@@ -301,7 +307,6 @@ $filter-icon-size: 18px;
         padding: rem($gs-baseline * 2) 0 0;
     }
 }
-// the container for prices / buy button
 .event-item__cta {
     width: 100%;
     padding: $gs-baseline 0 0;
