--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -282,16 +282,8 @@ $filter-icon-size: 18px;
     margin-bottom: rem($gs-baseline);
     position: relative;
 
-    @include fs-headline(2);
-
-    @include mq(tablet) {
-        @include fs-headline(3);
-    }
-
-    .event-item--card & {
-        @include fs-headline(2);
-    }
-
+    @include fs-headline(3);
+    font-weight: 500;
 }
 .event-item__time {
     @include fs-data(4);
@@ -394,9 +386,9 @@ $filter-icon-size: 18px;
     background-color: $mem-live-accent;
     @include fs-data(2);
     position: relative;
-    top: rem(-3px);
-    padding: rem(1px) rem(3px);
-    margin-right: rem(4px);
+    top: -2px;
+    padding: 1px 3px;
+    margin-right: 4px;
 }
 
 /* ==========================================================================
@@ -447,7 +439,8 @@ $filter-icon-size: 18px;
 
     @include mq(desktop) {
         .event-item__title {
-            @include fs-headline(5);
+            @include fs-headline(4);
+            font-weight: 500;
         }
         .event-item__time {
             @include fs-headline(2);
@@ -465,9 +458,13 @@ $filter-icon-size: 18px;
 
 // use a shorter box for minimal theme
 .event-item--minimal {
+    .event-item__title {
+        @include fs-headline(2);
+        font-weight: 500;
+    }
     @include mq(mobileLandscape) {
         .event-item__container {
-            height: rem(280px);
+            height: rem(240px);
         }
     }
 }
@@ -477,6 +474,10 @@ $filter-icon-size: 18px;
    ========================================================================== */
 
 .event-item--card {
+    .event-item__title {
+        @include fs-headline(2);
+        font-weight: 500;
+    }
     @include mq(tablet) {
         .event-item__container {
             height: auto;
