Spacing fixes for event listings

--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -59,6 +59,8 @@
                         </li>
                     }
                 </ul>
+            </div>
+            <div class="event-block__footer">
                 <button class="js-toggle action action--no-top-margin action--toggle" data-toggle="js-toggle-past-events" data-toggle-label="Less">More past events</button>
             </div>
         </div>
