--- a/frontend/app/views/fragments/event/itemSummary.scala.html
+++ b/frontend/app/views/fragments/event/itemSummary.scala.html
@@ -10,7 +10,7 @@
     <div class="event-item__meta">
         <h2 class="event-item__title">
             @if(event.isSoldOut){
-                <span class="event-status--sold-out">Sold Out</span>
+                <span class="event-status event-status--sold-out">Sold out</span>
             }
             @event.name.text
         </h2>
