--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -30,7 +30,7 @@
                     </div>
                     <h2 class="event-content__name">
                         @if(event.isSoldOut){
-                            <span class="event-status--sold-out">Sold Out</span>
+                            <span class="event-status event-status--sold-out">Sold out</span>
                         }
                         @event.name.text
                     </h2>
