Refactor no-results message to not use CSS

--- a/frontend/app/views/event/guardianLive.scala.html
+++ b/frontend/app/views/event/guardianLive.scala.html
@@ -7,5 +7,5 @@
         "guardian-live"
     )
 
-    @views.html.event.list(eventPortfolio, pageInfo, showPastEvents=true)
+    @views.html.event.list(eventPortfolio, "Sorry, no matching events were found.", showPastEvents=true)
 }
