--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -64,5 +64,5 @@
         </div>
     </div>
 
-    @views.html.event.list(eventPortfolio, pageInfo)
+    @views.html.event.list(eventPortfolio, "Sorry, no matching Masterclasses were found.")
 }
