--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -1,4 +1,8 @@
-@(eventPortfolio: model.EventPortfolio, pageInfo: model.PageInfo, showPastEvents: Boolean = false)(implicit token: play.filters.csrf.CSRF.Token)
+@(
+    eventPortfolio: model.EventPortfolio,
+    noResultsMessage: String,
+    showPastEvents: Boolean = false
+)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import com.gu.membership.salesforce.Tier
 @import model.Benefits
@@ -29,13 +33,17 @@
             <h4 class="event-block__header__title case--lower">What's on</h4>
         </div>
         <div class="event-block__events">
-            <ul class="grid grid--3up u-unstyled@if(eventPortfolio.normal.length == 0){ events-list--empty}" id="js-filter-container">
-                @for(event <- eventPortfolio.normal) {
-                    <li class="grid__item js-filter-item">
-                        @fragments.event.item(event, false)
-                    </li>
-                }
-            </ul>
+            @if(eventPortfolio.normal.isEmpty) {
+                <div class="event-block__empty">@noResultsMessage</div>
+            } else {
+                <ul class="grid grid--3up u-unstyled" id="js-filter-container">
+                    @for(event <- eventPortfolio.normal) {
+                        <li class="grid__item js-filter-item">
+                            @fragments.event.item(event, false)
+                        </li>
+                    }
+                </ul>
+            }
         </div>
     </div>
 
