--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -19,16 +19,16 @@
                                     </span>
                                 </span>
                                 <span class="hidden-mobile js-user-detail">
-                                    <span class="identity__notice control__info">Sign in</span>
+                                    <span class="identity__notice control__info case--lower">Sign in</span>
                                     <span class="identity__account control__info u-h no-underline--override js-user-displayname"></span>
-                                    <span class="identity__tier control__info u-h no-underline--override case--capitalize js-user-tier"></span>
+                                    <span class="identity__tier control__info u-h no-underline--override js-user-tier"></span>
                                 </span>
                             </a>
                         </li>
                         <li class="menu-item menu-item--last is-hidden js-header-join-us-cta">
                             <a href="/join" role="menuitem" class="no-underline hidden-mobile control-container" title="Join us">
                                 <span class="control control--no-border"><i class="icon-g-black"></i></span>
-                                <span class="control__info no-underline--override hidden-mobile">Join us</span>
+                                <span class="control__info no-underline--override case--lower hidden-mobile">Join us</span>
                             </a>
                         </li>
                     </ul>
