--- a/frontend/assets/stylesheets/nav/_nav.scss
+++ b/frontend/assets/stylesheets/nav/_nav.scss
@@ -64,7 +64,7 @@ $_global-nav-height: 36px;
         padding: 0 rem($_global-nav-height * 2) 0 rem($gs-gutter / 2);
 
         @include mq(tablet) {
-            padding-right: rem($gs-gutter / 2);
+            padding: 0 rem($gs-gutter);
         }
     }
     .nav__list {
@@ -124,8 +124,8 @@ $_global-nav-height: 36px;
    ========================================================================== */
 
 .nav--brand {
-    @include fs-bodyCopy(1);
-    padding-top: rem($gs-gutter/2);
+    @include fs-bodyHeading(1);
+    padding-top: rem($gs-gutter / 2);
     text-align: right;
 
     .nav__link {
